--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,49 +8,58 @@
     <title>About Me</title>
 
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+
+
 </head>
 
 <body>
     <header id="master">
-    <div class="container">
-        <a href="index.html" id="logo">Phillip Bang</a>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>    
+        <div class="container">
+            <a href="index.html" id="logo">Phillip Bang</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
 
-<div id="main-container" class="container">
-    <section class="main-section">
-        <h1>About Me</h1>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>About Me</h1>
 
-        <img src="assets/images/matthew-henry-58760-unsplash.jpg" class="auth-image" alt="Phillip Bang">
+            <img src="assets/images/matthew-henry-58760-unsplash.jpg" class="auth-image" alt="Phillip Bang">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum corporis minus sint facere perspiciatis magnam quaerat quos recusandae doloremque suscipit, cupiditate voluptatibus quisquam at laborum excepturi fugit, odit nihil error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vitae distinctio rem dolores nihil. Laboriosam, quos consequuntur. Ut facilis nobis dolorum expedita amet! Nihil omnis dolorem voluptates debitis aut? Dolorum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum corporis minus sint facere perspiciatis
+                magnam quaerat quos recusandae doloremque suscipit, cupiditate voluptatibus quisquam at laborum
+                excepturi fugit, odit nihil error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                vitae distinctio rem dolores nihil. Laboriosam, quos consequuntur. Ut facilis nobis dolorum expedita
+                amet! Nihil omnis dolorem voluptates debitis aut? Dolorum.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic eius velit repudiandae, ipsum neque odit aliquam error veritatis in minus dolorem a aspernatur quasi dignissimos labore. Nam, magni excepturi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic eius velit repudiandae, ipsum neque
+                odit aliquam error veritatis in minus dolorem a aspernatur quasi dignissimos labore. Nam, magni
+                excepturi.</p>
 
-    </section>
-</div>
-    <!-- <section class="sidebar">
-        <div id="connect">
-            <h2>Connect with Me</h2>
+        </section>
+    </div>
 
-            <img src="" class="social" alt="">
-            <img src="" class="social" alt="">
-            <img src="" class="social" alt="">
-        </div>
-    </section>
-</div> -->
 
     <footer>
+        <a href="https://github.com/plbang" target="_blank">
+            <img class="icons" src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip" data-placement="top"
+                title="GitHub"></a>
+        <a href="https://www.linkedin.com/in/phillip-bang-199b088a" target="_blank">
+            <img class="icons" src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip" data-placement="top"
+                title="LinkedIn"></a>
+        <a href="https://stackexchange.com/users/14586718/pbang" target="_blank">
+            <img class="icons" src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip" data-placement="top"
+                title="Stack Overflow"></a>
         <div class="container">&copy; Copyright Phillip Bang</div>
     </footer>
 
 
 </body>
-</html>
 
+</html>
