--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
 
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -64,7 +65,16 @@
     </section>
 </div> -->
  
-    <footer>
+<footer>
+        <a href="https://github.com/plbang" target="_blank">
+            <img class="icons" src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip" data-placement="top"
+                title="GitHub"></a>
+        <a href="https://www.linkedin.com/in/phillip-bang-199b088a" target="_blank">
+            <img class="icons" src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip" data-placement="top"
+                title="LinkedIn"></a>
+        <a href="https://stackexchange.com/users/14586718/pbang" target="_blank">
+            <img class="icons" src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip" data-placement="top"
+                title="Stack Overflow"></a>
         <div class="container">&copy; Copyright Phillip Bang</div>
     </footer>
 
