--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,48 +14,54 @@
 
 <body>
     <header id="master">
-    <div class="container">
-        <a href="index.html" id="logo">Phillip Bang</a>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>    
+        <div class="container">
+            <a href="index.html" id="logo">Phillip Bang</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
 
-<div id="main-container" class="container">
-    <section class="main-section">
-        <h1>Portfolio</h1>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Portfolio</h1>
 
-        <div class="work">
-            <img src="assets/images/samuel-scrimshaw-76649-unsplash.jpg" class="auth-image" alt="Hangman">
-            <h3>Hangman</h3>
-        </div>
+            <div class="work">
+                <a href="https://plbang.github.io/Savor-the-Feeling/home" target="_blank">
+                    <img src="assets/images/savor-the-feeling.png" class="auth-image" alt="Savor the Feeling">
+                    <h3>Savor the Feeling</h3>
+            </div>
 
-        <div class="work">
-            <img src="assets/images/samuel-scrimshaw-76649-unsplash.jpg" class="auth-image" alt="RPG Game">
-            <h3>RPG Game</h3>
-        </div>
+            <div class="work">
+                <a href="https://plbang.github.io/Train-Project/" target="_blank">
+                    <img src="assets/images/train-station.png" class="auth-image" alt="RPG Game">
+                    <h3>Train Station</h3>
+            </div>
 
-        <div class="work">
-            <img src="assets/images/samuel-scrimshaw-76649-unsplash.jpg" class="auth-image" alt="Trivia Game">
-            <h3>Trivia Game</h3>
-        </div>
+            <div class="work">
+                <a href="https://plbang.github.io/Word-Guess-Game/" target="_blank">
+                    <img src="assets/images/word-guess-game.png" class="auth-image" alt="Trivia Game">
+                    <h3>Word Guess</h3>
+            </div>
 
-        <div class="work">
-            <img src="assets/images/samuel-scrimshaw-76649-unsplash.jpg" class="auth-image" alt="Rutgers Info Widget">
-            <h3>Rutgers Info Widget</h3>
-        </div>
+            <div class="work">
+                <a href="https://plbang.github.io/Giphy-API/" target="_blank">
+                    <img src="assets/images/giphy-search.png" class="auth-image" alt="Rutgers Info Widget">
+                    <h3>GIPHY Search</h3>
+            </div>
 
-        <div class="work">
-            <img src="assets/images/samuel-scrimshaw-76649-unsplash.jpg" class="auth-image" alt="Rock Paper Scissors">
-            <h3>Rock Paper Scissors</h3>
-        </div>
+            <div class="work">
+                <a href="https://plbang.github.io/unit-4-game/" target="_blank">
+                    <img src="assets/images/crystal.png" class="auth-image" alt="Rock Paper Scissors">
+                    <h3>Crystals Collector</h3>
+            </div>
 
-    </section>
-</div>
-        <!-- <section class="sidebar">
+
+        </section>
+    </div>
+    <!-- <section class="sidebar">
         <div id="connect">
             <h2>Connect with Me</h2>
 
@@ -64,21 +71,21 @@
         </div>
     </section>
 </div> -->
- 
-<footer>
+
+    <footer>
         <a href="https://github.com/plbang" target="_blank">
-            <img class="icons" src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip" data-placement="top"
-                title="GitHub"></a>
+            <img class="icons" src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip"
+                data-placement="top" title="GitHub"></a>
         <a href="https://www.linkedin.com/in/phillip-bang-199b088a" target="_blank">
-            <img class="icons" src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip" data-placement="top"
-                title="LinkedIn"></a>
+            <img class="icons" src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip"
+                data-placement="top" title="LinkedIn"></a>
         <a href="https://stackexchange.com/users/14586718/pbang" target="_blank">
-            <img class="icons" src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip" data-placement="top"
-                title="Stack Overflow"></a>
+            <img class="icons" src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip"
+                data-placement="top" title="Stack Overflow"></a>
         <div class="container">&copy; Copyright Phillip Bang</div>
     </footer>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
-</html>
 
+</html>
