--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
     <footer>
         <a href="https://github.com/plbang" target="_blank">
-            <img class="icons" src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip" data-placement="top"
+            <img src="assets/images/if_github_circle_black_107161.png" alt="GitHub" data-toggle="tooltip" data-placement="top"
                 title="GitHub"></a>
         <a href="https://www.linkedin.com/in/phillip-bang-199b088a" target="_blank">
-            <img class="icons" src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip" data-placement="top"
+            <img src="assets/images/if_linkedin_circle_black_107159.png" alt="LinkedIn" data-toggle="tooltip" data-placement="top"
                 title="LinkedIn"></a>
         <a href="https://stackexchange.com/users/14586718/pbang" target="_blank">
-            <img class="icons" src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip" data-placement="top"
+            <img src="assets/images/if_stackoverflow_rounded_394191.png" alt="Stack Overflow" data-toggle="tooltip" data-placement="top"
                 title="Stack Overflow"></a>
         <div class="container">&copy; Copyright Phillip Bang</div>
     </footer>
